# aoc21

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  conanfile.txt  input.cpp  input.h  main.cpp  solution.h  utils.cpp  utils.h
.github/workflows/: cmake.yml
day00/: solution.cpp  solution.h  test.cpp
day01/: CMakeLists.txt  solution.cpp  solution.h  test.cpp
day02/: solution.cpp  solution.h  test.cpp
day03/: solution.cpp  solution.h  test.cpp
day04/: solution.cpp  solution.h  test.cpp
day05/: solution.cpp  solution.h  test.cpp
day06/: solution.cpp  solution.h  test.cpp
day07/: solution.cpp  solution.h  test.cpp
day08/: solution.cpp  solution.h  test.cpp
day09/: solution.cpp  solution.h  test.cpp
day10/: solution.cpp  solution.h  test.cpp
day11/: solution.cpp  solution.h  test.cpp
day12/: solution.cpp  solution.h  test.cpp
day13/: solution.cpp  solution.h  test.cpp
day14/: solution.cpp  solution.h  test.cpp
day15/: solution.cpp  solution.h  test.cpp
day16/: solution.cpp  solution.h  test.cpp
day17/: solution.cpp  solution.h  test.cpp
day18/: solution.cpp  solution.h  test.cpp
day19/: solution.cpp  solution.h  test.cpp
day20/: solution.cpp  solution.h  test.cpp
day21/: solution.cpp  solution.h  test.cpp
day22/: solution.cpp  solution.h  test.cpp
day24/: compute_decompiled.h  compute_simplified.h  solution.cpp  solution.h  test.cpp
day25/: solution.cpp  solution.h  test.cpp
